recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: type mismatch;
 found   : Unit
 required: java.awt.Color
		setCouleur(current(steps));
                                  ^